[gd_scene load_steps=3 format=3 uid="uid://c52mx7mtbgmm7"]

[ext_resource type="Script" path="res://scenes/load_menu.gd" id="1_0npha"]
[ext_resource type="FontFile" uid="uid://q3hbl03m21y7" path="res://fonts/Rajdhani/Rajdhani-Medium.ttf" id="1_vhk2o"]

[node name="load_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0npha")

[node name="title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -236.5
offset_top = 50.0
offset_right = 236.5
offset_bottom = 169.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_vhk2o")
theme_override_font_sizes/font_size = 45
text = "WILD WORDS ENGINE
CHARACTER SHEET MAKER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="button_container" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -118.0
offset_top = -81.5
offset_right = 118.0
offset_bottom = 81.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="load_character" type="Button" parent="button_container"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_vhk2o")
theme_override_font_sizes/font_size = 25
text = "Load Character"

[node name="new_character" type="Button" parent="button_container"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_vhk2o")
theme_override_font_sizes/font_size = 25
text = "New Character"

[node name="new_template" type="Button" parent="button_container"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_vhk2o")
theme_override_font_sizes/font_size = 25
text = "New Template"

[node name="quit_app" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -47.5
offset_top = -50.0
offset_right = 47.5
offset_bottom = -9.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_vhk2o")
theme_override_font_sizes/font_size = 25
text = "Quit"

[connection signal="pressed" from="button_container/load_character" to="." method="_on_load_character_pressed"]
[connection signal="pressed" from="button_container/new_character" to="." method="_on_new_character_pressed"]
[connection signal="pressed" from="button_container/new_template" to="." method="_on_new_template_pressed"]
[connection signal="pressed" from="quit_app" to="." method="_on_quit_app_pressed"]
